[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "homeassistant-bus-il"
version = "0.1.0"
description = ""
authors = ["ScDor <18174994+ScDor@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
homeassistant = "^2024.7.4"
loguru = "^0.7.2"
hishel = "^0.0.30"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.ruff.lint]
ignore = [
  "ANN",
  "COM812",
  "D",
  "DTZ",
  "E501",
  "EM101",
  "EM102",
  "FA",
  "FBT001",
  "FBT002",
  "FIX002",
  "G003",
  "G004",
  "INP001",
  "ISC001",
  "PD901",
  "PLR0913",
  "S113",
  "S501",
  "S603",
  "S607",
  "TD002",
  "TD003",
  "TD004",
  "TRY003"
]
select = ["ALL"]
